# casync

./: .dir-locals.el  .gitignore  .travis.yml  .vimrc  Makefile  Makefile.am  NEWS  README.md  TODO  autogen.sh  cadecoder.c  caencoder.c  caencoder.h  caformat-util.c  caformat-util.h  caformat.h  caindex.c  castore.c  casync-ftp  casync.c  casync.h  chunker.c  chunker.h  configure.ac  def.h  meson.build  meson_options.txt  mkosi.build  mkosi.default  realloc-buffer.c  test-caencoder.c  test-casync.c  util.c  util.h
.semaphore/: semaphore.yml
coccinelle/: fprintf.cocci
doc/: casync.rst  conf.py  index.rst  meson.build
shell-completion/bash/: casync  meson.build
src/: 75-casync.rules.in  Makefile  affinity-count.c  affinity-count.h  cacache.c  cacache.h  cachunk.c  cachunk.h  cachunker.c  cachunker.h  cachunkid.c  cachunkid.h  cacommon.h  cacompression.c  cacompression.h  cacutmark.c  cacutmark.h  cadecoder.c  cadecoder.h  cadigest.c  cadigest.h  caencoder.c  caencoder.h  cafileroot.c  cafileroot.h  caformat-util.c  caformat-util.h  caformat.h  cafuse.c  cafuse.h  caindex.c  caindex.h  calocation.c  calocation.h  camakebst.c  camakebst.h  camatch.c  camatch.h  canametable.c  canametable.h  (+72 more)
test/: http-server.py  meson-check-help.sh  meson.build  notify-wait.c  pseudo-ssh  report-holes.py  semaphore-run  test-cache.sh.in  test-cachunk.c  test-cachunker-histogram.c  test-cachunker.c  test-cacutmark.c  test-cadigest.c  test-caencoder.c  test-caformat.c  test-caindex.c  test-calc-digest.c  test-calocation.c  test-camakebst.c  test-camatch.c  test-caorigin.c  test-casync.c  test-cautil.c  test-chunker.c  test-feature-flags.c  test-fuse.sh.in  test-mtls.sh.in  test-nbd.sh.in  test-script-gzip.sh.in  test-script-sha256.sh.in  test-script-xz.sh.in  test-script.sh.in  test-seed.sh.in  test-util.c
test-files/: .gitignore  a symlink with umläüts  file  large  test-files.sh  äöüß
test-files/gęślą/: file
test-files/gęślą/000000/: file
test-files/gęślą/a/: file
test-files/gęślą/b/: file
test-files/jaźn/: file
test-files/jaźn/000000/: file
test-files/jaźn/a/: file
test-files/jaźn/b/: file
test-files/żażółcić/: file
test-files/żażółcić/000000/: file
test-files/żażółcić/a/: file
test-files/żażółcić/b/: file
test/fuzz/: fuzz-compress.c  fuzz-main.c  meson.build
tools/: oss-fuzz.sh
