# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1+

option('fuse', type : 'boolean', value : true,
       description : 'build the FUSE integration (requires fuse-devel)')
option('selinux', type : 'boolean', value : true,
       description : 'build the SELinux backend (requires libselinux-devel)')
option('udev', type : 'boolean', value : true,
       description : 'build the libudev integration (requires libudev-devel)')
option('udevrulesdir', type : 'string', value: '',
       description: 'Path where udev rules are installed to (Defaults to udevdir specified in udev.pc)')
option('man', type : 'boolean', value : true,
       description : 'build and install man pages (requires sphinx-build')

option('oss-fuzz', type : 'boolean', value : 'false',
       description : 'build against oss-fuzz')
option('llvm-fuzz', type : 'boolean', value : 'false',
       description : 'build against LLVM libFuzzer')
